[package]
name = "rust-transaction-processing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
csv = "1.1.6"
ctor = "0.1.21"
env_logger = "0.9.0"
log = "0.4.14"
rust_decimal = "1.22"
serde = {version = "1.0.136", features = ["derive"]}
